[gd_scene format=3 uid="uid://dnlgwise5jnbd"]

[ext_resource type="Script" uid="uid://c5g1n1yhto3g0" path="res://scripts/note_template.gd" id="2_mn3vr"]

[node name="NoteTemplate" type="PanelContainer" unique_id=152856914]
offset_right = 170.0
offset_bottom = 90.0
script = ExtResource("2_mn3vr")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=2066118148]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=860708051]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer" unique_id=1215217264]
layout_mode = 2
placeholder_text = "Title"
alignment = 1

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer" unique_id=1230430556]
custom_minimum_size = Vector2(0, 153.94)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Description"
wrap_mode = 1
scroll_fit_content_height = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1107342082]
layout_mode = 2

[node name="Trash" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=1517480654]
layout_mode = 2
size_flags_horizontal = 3
text = "Trash"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Trash" to="." method="_on_trash_pressed"]
